# browser-simulator

./: .env.tpl  .envrc  .gitignore  .gitmodules  2026-04-16-cloudflare-driver.md  2026-04-17_build-macos-binary.md  2026-06-01-no-tui-mode.md  2026-06-02-new-video-constraints-support.org  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml  flake.nix  justfile
.codex/skills/release-hyper-browser-simulator/: SKILL.md
.codex/skills/release-hyper-browser-simulator/agents/: openai.yaml
.codex/skills/run-headless-simulator/: SKILL.md
.codex/skills/run-headless-simulator/agents/: openai.yaml
.github/workflows/: ci.yml  release.yml
browser/: Cargo.toml
browser/src/: auth.rs  lib.rs  util.rs
browser/src/participant/: commands.rs  frontend.rs  inner.rs  inner_lite.rs  messages.rs  mod.rs  remote.rs  remote_stub.rs  selectors.rs  state.rs  store.rs  transport_data.rs
browser/src/participant/cloudflare/: mod.rs
browser/src/participant/device_farm/: control.rs  mod.rs  test_grid.rs  webdriver_driver.rs
browser/src/participant/frontend/: builder.rs  commands.rs  core.rs  driver.rs  lite.rs  mod.rs  selectors.rs
browser/src/participant/local/: chromium_driver.rs  commands.rs  core.rs  frontend.rs  lite.rs  mod.rs  selectors.rs  session.rs
browser/src/participant/shared/: messages.rs  mod.rs  runtime.rs  spec.rs  state.rs  store.rs
browser/tests/: cloudflare_driver.rs  device_farm_driver.rs
cloudflare-worker-client/: Cargo.toml  build.rs
cloudflare-worker-client/openapi/: cloudflare-browser-simulator.json
cloudflare-worker-client/src/: client.rs  generated.rs  lib.rs
config/: .gitignore  Cargo.toml
config/src/: app_config.rs  args.rs  browser_config.rs  client_config.rs  cloudflare_config.rs  default-config.yaml  device_farm_config.rs  lib.rs  participant_config.rs  remote_url_option.rs
config/src/media/: custom_fake_media.rs  mod.rs
docs/: browser-driver.md
examples/: join-hyper-session.rs  media-conversion.rs
http/: Cargo.toml
http/src/: error.rs  lib.rs  main.rs  participant.rs  router.rs
nix/: packages.nix
orchestrator/: Cargo.toml  example-config.yml
orchestrator/src/: config.rs  lib.rs  main.rs  runner.rs
src/: action.rs  app.rs  args.rs  aws.rs  browser.rs  config.rs  errors.rs  headless.rs  lib.rs  logging.rs  main.rs  tui.rs
src/browser/: auth.rs  join.rs  mod.rs  participant.rs
src/browser/participant/: commands.rs  inner.rs  messages.rs  mod.rs  state.rs  store.rs
src/components/: browser_start.rs  fps.rs  logs.rs  mod.rs  modal.rs  participants.rs
src/config/: app_config.rs  args.rs  browser_config.rs  client_config.rs  default-config.yaml  keybindings.rs  keybindings.yaml  mod.rs  participant_config.rs
src/media/: custom_fake_media.rs  mod.rs
src/tui/: action.rs  app.rs  layout.rs  mod.rs  theme.rs  tui.rs
src/tui/components/: browser_start.rs  component.rs  logs.rs  mod.rs  nav_tabs.rs  participants.rs
src/tui/widgets/: label_and_text.rs  list_input.rs  mod.rs
stats-gatherer/: Cargo.toml
stats-gatherer/src/: config.rs  lib.rs  main.rs
stats-gatherer/src/collectors/: collector.rs  mod.rs  orchestrator.rs  participant_collector.rs  server_collector.rs  space_collector.rs
stats-gatherer/src/metrics/: mod.rs  server_data.rs  shared.rs  space_data.rs
tui/: Cargo.toml
tui/examples/: join-hyper-session.rs  media-conversion.rs
tui/src/: lib.rs  logging.rs  main.rs
tui/src/tui/: action.rs  app.rs  keybindings.rs  layout.rs  mod.rs
tui/src/tui/components/: browser_start.rs  component.rs  fps.rs  logs.rs  participants.rs
tui/src/tui/widgets/: button.rs  enum_list_input.rs  list_input.rs  mod.rs  text_input.rs
