[workspace]
resolver = "2"
members = [
  "browser",
  "config",
  "http",
  "tui",
]

[workspace.package]
version = "0.1.0"
authors = ["hyper.video <info@hyper.video>"]
edition = "2021"
repository = "https://github.com/hypervideo/hyper.video"

[workspace.dependencies]
axum = { version = "0.8.3" }
axum-server = "0.7.2"
base64 = "0.22.1"
better-panic = "0.3.0"
# TODO: fix for https://github.com/mattsse/chromiumoxide/issues/243
chromiumoxide = { git = "https://github.com/caido/dependency-chromiumoxide", branch = "ef-json-parsing", features = ["tokio-runtime", "bytes"], default-features = false }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive", "env", "cargo", "string"] }
color-eyre = "0.6.3"
config = { version = "0.15.11", default-features = false, features = ["yaml", "convert-case", "async"] }
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
derive_more = { version = "2.0.1", default-features = false, features = ["deref", "deref_mut", "debug", "display"] }
directories = "6.0.0"
eyre = "0.6.12"
futures = "0.3.31"
human-panic = "2.0.2"
lazy_static = "1.5.0"
libc = "0.2.161"
pretty_assertions = "1.4.1"
random_name_generator = "0.3.6"
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
reqwest = { version = "0.12.15", features = ["cookies", "json", "blocking"] }
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
serde_yml = "0.0.12"
sha1 = "0.10.6"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.27.1", features = ["derive"] }
temp-dir = "0.1.16"
thiserror = "2.0.6"
tokio = { version = "1.46.1", default-features = false, features = ["macros", "rt-multi-thread", "sync", "signal"] }
tokio-tungstenite = "0.26.2"
tokio-util = "0.7.12"
tracing = "0.1.41"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
tui-logger = { version = "0.17.2", features = ["crossterm", "tracing", "tracing-subscriber", "tracing-support"] }
tui-textarea = "0.7.0"
url = { version = "2.5.4", features = ["serde"] }
which = "8.0.0"

client-simulator-browser = { path = "./browser" }
client-simulator-config = { path = "./config" }
client-simulator-tui = { path = "./tui" }

hyper-video-maybe-backoff = { path = "../../shared/maybe-backoff" }

[workspace.lints.clippy]
# Allows for simpler exports.
module_inception = "allow"
# E.g. when using `Rc<RefCell<···>>`, the type complexity lint is quite
# counterproductive since factoring out the type would hide cruciual semantics.
type_complexity = "allow"
# We can decide on a case-by-case basis if arguments should be refactored.
too_many_arguments = "allow"
