[workspace]
resolver = "2"
members = [
  ".",
  "browser",
  "cloudflare-worker-client",
  "config",
  "tui",
]

[workspace.package]
version = "0.3.4"
authors = ["hyper.video <info@hyper.video>"]
edition = "2021"
homepage = "https://github.com/hypervideo/browser-simulator"
repository = "https://github.com/hypervideo/browser-simulator"

[workspace.dependencies]
better-panic = "0.3.0"
chromiumoxide = { version = "0.9.1", features = ["bytes"], default-features = false }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env", "cargo", "string"] }
color-eyre = "0.6.5"
config = { version = "0.15.22", default-features = false, features = ["yaml", "convert-case", "async"] }
crossterm = { version = "0.29.0", features = ["serde", "event-stream"] }
derive_more = { version = "2.1.1", default-features = false, features = ["deref", "deref_mut", "debug", "display"] }
directories = "6.0.0"
eyre = "0.6.12"
futures = "0.3.32"
human-panic = "2.0.8"
lazy_static = "1.5.0"
libc = "0.2.186"
pretty_assertions = "1.4.1"
names = { version = "0.14.0", default-features = false }
ratatui = { version = "0.30.0", features = ["serde", "macros", "crossterm_0_29"] }
reqwest = { version = "0.13.3", features = ["cookies", "json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.11.0"
signal-hook = "0.4.4"
strip-ansi-escapes = "0.2.1"
strum = { version = "0.28.0", features = ["derive"] }
temp-dir = "0.2.0"
tokio = { version = "1.52.2", default-features = false, features = ["macros", "rt-multi-thread", "sync", "signal"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "serde"] }
tui-logger = { version = "0.18.2", features = ["crossterm", "tracing", "tracing-subscriber", "tracing-support"] }
url = { version = "2.5.8", features = ["serde"] }
which = "8.0.2"
yaml_serde = "0.10.4"

client-simulator-browser = { path = "./browser" }
client-simulator-config = { path = "./config" }
client-simulator-tui = { path = "./tui" }
cloudflare-worker-client = { path = "./cloudflare-worker-client" }

[workspace.lints.clippy]
# Allows for simpler exports.
module_inception = "allow"
# E.g. when using `Rc<RefCell<···>>`, the type complexity lint is quite
# counterproductive since factoring out the type would hide cruciual semantics.
type_complexity = "allow"
# We can decide on a case-by-case basis if arguments should be refactored.
too_many_arguments = "allow"

# -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-

[package]
name = "hyper-client-simulator"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A Rust TUI for simulating Chromium-backed browser participants against hyper.video sessions."
homepage.workspace = true
repository.workspace = true

[dependencies]
better-panic.workspace = true
clap.workspace = true
client-simulator-browser.workspace = true
client-simulator-config.workspace = true
client-simulator-tui.workspace = true
color-eyre.workspace = true
eyre.workspace = true
human-panic.workspace = true
libc.workspace = true
serde_json.workspace = true
strip-ansi-escapes.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[package.metadata.cargo-udeps.ignore]
normal = [
  "human-panic",
]
development = [
  # Used conditionally in development mode.
  "better-panic",
]

[lints]
workspace = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
