[package]
name = "client-simulator-browser"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
chromiumoxide.workspace = true
chrono.workspace = true
derive_more.workspace = true
eyre.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
which.workspace = true

client-simulator-config.workspace = true
hyper-video-maybe-backoff.workspace = true

[lints]
workspace = true
