[package]
name = "client-simulator-browser"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
chromiumoxide.workspace = true
chrono.workspace = true
derive_more.workspace = true
eyre.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true
which.workspace = true

client-simulator-config.workspace = true
hyper-video-maybe-backoff.workspace = true

[lints]
workspace = true
