[package]
name = "client-simulator-browser"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
chromiumoxide.workspace = true
chrono.workspace = true
derive_more.workspace = true
eyre.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true
which.workspace = true

client-simulator-config.workspace = true
cloudflare-worker-client.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "time"] }

[lints]
workspace = true
