[package]
name = "client-simulator-http"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
axum = { workspace = true, features = ["ws"] }
axum-server = { workspace = true, features = ["tls-rustls"] }
clap = { workspace = true, features = ["derive"] }
client-simulator-browser.workspace = true
client-simulator-config.workspace = true
color-eyre.workspace = true
eyre.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
