[package]
name = "client-simulator-stats-gatherer"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[[bin]]
name = "client-simulator-stats-gatherer"
path = "src/main.rs"

[dependencies]
# Core dependencies
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "env"] }
clickhouse = "0.12.0"
color-eyre = "0.6.3"
comfy-table = "7.1.0"
config = { workspace = true, features = ["yaml", "convert-case"] }
eyre = "0.6.12"
humantime = "2.1.0"
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.132"
serde_repr = "0.1.20"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }
