[package]
name = "client-simulator-tui"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
better-panic.workspace = true
chrono.workspace = true
clap.workspace = true
color-eyre.workspace = true
crossterm.workspace = true
derive_more.workspace = true
eyre.workspace = true
futures.workspace = true
human-panic.workspace = true
lazy_static.workspace = true
libc.workspace = true
pretty_assertions.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_yml.workspace = true
signal-hook.workspace = true
strip-ansi-escapes.workspace = true
strum.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
tui-logger.workspace = true
tui-textarea.workspace = true
url.workspace = true

client-simulator-browser.workspace = true
client-simulator-config.workspace = true

[lints]
workspace = true

[package.metadata.cargo-udeps.ignore]
normal = [
  "human-panic",
  # Used in tests
  "pretty_assertions",
]
development = [
  # Used conditionally in development mode.
  "better-panic",
]

[dev-dependencies]
directories.workspace = true
url.workspace = true
