[package]
name = "client-simulator-tui"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
color-eyre.workspace = true
crossterm.workspace = true
derive_more.workspace = true
eyre.workspace = true
futures.workspace = true
lazy_static.workspace = true
pretty_assertions.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_yml.workspace = true
signal-hook.workspace = true
strum.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
tui-logger.workspace = true
tui-textarea.workspace = true
url.workspace = true

client-simulator-browser.workspace = true
client-simulator-config.workspace = true

[dev-dependencies]
directories.workspace = true
url.workspace = true

[lints]
workspace = true

[package.metadata.cargo-udeps.ignore]
normal = [
  # Used in tests
  "pretty_assertions",
]
